# advent-of-code-2020

./: Cargo.toml  README.md
src/: main.rs
src/challenge/: d1.rs  d10.rs  d11.rs  d12.rs  d13.rs  d14.rs  d15.rs  d16.rs  d2.rs  d25.rs  d3.rs  d4.rs  d5.rs  d6.rs  d7.rs  d8.rs  d9.rs  mod.rs
work/: 10a_sorted_with_extras.txt  13a_tiny.txt  4b_manual_sample.txt
